Added new user functionality for ER and LT roles.  They both have all required basic functionality of a personnel role.  They can login, view their logs on a landing screen, see their navbar abilities for future use cases, edit their demographics, and change their password.  Working towards issue #23 and issue #25

--- a/iTrust2/src/main/resources/views/login.html
+++ b/iTrust2/src/main/resources/views/login.html
@@ -79,11 +79,17 @@ body {
 								<td><a class="iTrust2TestNavlink"
 									onclick="fillLoginFields('patient','123456')"
 									href="javascript:void(0)">Patient</a></td>
+								<td><a class="iTrust2TestNavlink"
+									onclick="fillLoginFields('er','123456')"
+									href="javascript:void(0)">ER</a></td>
 							</tr>
 							<tr>
 								<td><a class="iTrust2TestNavlink"
 									onclick="fillLoginFields('admin','123456')"
 									href="javascript:void(0)">Admin</a></td>
+								<td><a class="iTrust2TestNavlink"
+									onclick="fillLoginFields('lt','123456')"
+									href="javascript:void(0)">LT</a></td>
 								<td><a class="iTrust2TestNavlink"
 									onclick="fillLoginFields('null','null')"
 									href="javascript:void(0)"> </a></td>
