--- a/iTrust2/src/main/resources/views/er/emergencyHealthRecords.html
+++ b/iTrust2/src/main/resources/views/er/emergencyHealthRecords.html
@@ -1,13 +1,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="layout :: head(title=~{::title},links=~{})">
-<title>Demographics Edited</title>
+<title>HCP Emergency Health Records</title>
 </head>
 <body th:include="layout :: body" th:with="content=~{::content}">
 
+  <div th:fragment="content">
+    <h1>Under Construction</h1>
+  </div>
 
-	<div th:fragment="content">
-		<h1>Your demographics were updated successfully</h1>
-
-	</div>
 </body>
 </html>
