Added a dropdown menu for admin for Lab Procedures that has an Edit Lab Codes link that currently goes to a temporary under construction page.  This completes the new user role implementation.  Working towards issue #23 and issue #25

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -156,6 +156,13 @@ a {
 								id="editdemographics-personnel">Edit Demographics</a></li>
 						</ul>
 					</li>
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" href="#">Lab Procedures<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="/iTrust2/admin/editLabCodes"
+								id="editdemographics-personnel">Edit Lab Procedure Codes</a></li>
+						</ul>
+					</li>
 				</ul>
 				<ul id="hcp-dropdown" class="nav navbar-nav">
 					<li class="dropdown"><a class="dropdown-toggle"
@@ -251,7 +258,7 @@ a {
 							<li><a href="/iTrust2/personnel/editDemographics"
 								id="editdemographics-personnel">Edit Demographics</a></li>
 						</ul>
-					</li>
+					</li>	
 				</ul>
 				<ul id="extra-dropdown" class="nav navbar-nav">
 					<li><a
