Initilizing branch to attempt to merge front end and back end.

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -146,6 +146,8 @@ a {
 						<ul class="dropdown-menu">
 							<li><a href="/iTrust2/personnel/editDemographics"
 								id="editdemographics-personnel">Edit Demographics</a></li>
+								<li><a href="/iTrust2/patient/editPersonalRepresentatives"
+								id="editpersonalrepresentatives-patient">Edit Personal Representatives</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -173,6 +175,8 @@ a {
 							      id="editOfficeVisit">Edit Office Visit</a></li>
 					      	<li> <a href="/iTrust2/hcp/editPrescriptions"
 							      id="editPrescriptions-personnel">Edit Prescriptions</a></li>
+							      <li><a href="/iTrust2/patient/editPersonalRepresentatives"
+								id="editpersonalrepresentatives-patient">Edit Personal Representatives</a></li>
 						</ul>
 					</li>
 				</ul>
