Added break points in APIRepresentative controller as well as put a debugger statement in the rep html.  Changed saves in API to use domain object save method changed slight error in layout.html that occured during merging.  For issue #27

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -197,7 +197,7 @@ a {
 							<li> <a href="/iTrust2/hcp/editOfficeVisit"
 							      id="editOfficeVisit">Edit Office Visit</a></li>
 					      	<li> <a href="/iTrust2/hcp/editPrescriptions"
-							      id="editPrescriptions-personnel">Edit Prescriptions</a></l
+							      id="editPrescriptions-personnel">Edit Prescriptions</a></li>
 							<li><a href="/iTrust2/patient/editPersonalRepresentatives"
 								id="editpersonalrepresentatives-hcp">Edit Personal Representatives</a></li>
 						</ul>
