--- a/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
@@ -13,6 +13,7 @@
 			app.controller('repCtrl', function($scope, $http) {
 				
 				$scope.reps = [];
+				$scope.rep = "";
 				$scope.loadTable = function() {
 					// Get list of reps from rest api.
 					$http.get("/iTrust2/api/v1/editPersonalRepresentatives").then(
@@ -26,7 +27,7 @@
 				}
 				
 				$scope.removeRow = function() {
-					$http.delete("/iTrust2/api/v1/editPersonalRepresentatives").then(
+					$http.delete("/iTrust2/api/v1/editPersonalRepresentatives", $scope.rep).then(
 							function(response) {
 								$scope.loadTable();
 								$scope.message = "";
@@ -36,11 +37,13 @@
 				}
 				
 				// handle add representative button click
-				$scope.addRep = function() 
+				debugger;
+				$scope.addRep = function() {
+					console.log($scope.rep);
 					$http.post("/iTrust2/api/v1/editPersonalRepresentatives", $scope.rep).then(
 							function(response) {
 								$scope.loadTable();
-								$scope.rep.id = "";
+								$scope.rep = "";
 								$scope.errorAdding = "";
 							}, function(rejection) {
 								$scope.errorAdding = "Could not add personal representative";
@@ -49,6 +52,7 @@
 				}
 
 				// load table upon page loading
+				console.log($scope.rep)
 				$scope.loadTable();
 				
 			});
@@ -82,7 +86,7 @@
 						<form class="form-horizontal" role="form" name="addRepForm" ng-submit="addRep(addRepForm.$valid)">
 							<div class="form-group" style="padding-left:30px">
 								<label>Patient ID</label>
-								<input type="text" class="form-control" name="rep" ng-model="rep.id" required/>
+								<input type="text" class="form-control" name="repID" ng-model="rep" required/>
 							</div>
 							<div class="form-group" style="padding-left:30px">								
 								<div style="padding-left:170px">
@@ -137,7 +141,7 @@
 		
 		<div ng-app="repApp" ng-controller="repCtrl">	
 			<h4 style="color:red" ng-model="message"></h4>
-			<h1>Your Personal Representatives</h1>
+			<h1>Patients You Represent</h1>
 			<table style="width:100%">
 				<tr>
 					<td style="vertical-align: top">
