Implemented zero out method to stop recursive JSON mapping.  No longer has error when trying to add representative.  Issue #27

--- a/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
@@ -47,6 +47,7 @@
 								$scope.errorAdding = "";
 							}, function(rejection) {
 								$scope.errorAdding = "Could not add personal representative";
+								console.log(rejection.status)
 							})
 					
 				}
