Added a title and fixed accidental changes to .project file.  Workign toward issue #41

--- a/iTrust2/src/main/resources/views/er/emergencyHealthRecords.html
+++ b/iTrust2/src/main/resources/views/er/emergencyHealthRecords.html
@@ -91,6 +91,7 @@
 			<div class="container">
 				<h4 style="color:red" ng-model="message"></h4>
 				
+				<h1>Emergency Health Records</h1>
 				<br>
 				<form ng-submit="loadAll()">
               		<label for="patientID">Patient:</label>
