Representatives can now be added and the page updates for each new patient, working on showing usernames. Issue #27

--- a/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
@@ -27,7 +27,7 @@
 				}
 				
 				$scope.removeRow = function() {
-					$http.delete("/iTrust2/api/v1/editPersonalRepresentatives", $scope.rep).then(
+					$http.delete("/iTrust2/api/v1/editPersonalRepresentatives", $).then(
 							function(response) {
 								$scope.loadTable();
 								$scope.message = "";
@@ -72,7 +72,7 @@
 								<th>Action</th>
 							</tr>
 							<tr name="idRow" ng-repeat="r in reps">
-								<td name="idCell">{{r.id}}</td>
+								<td name="idCell">{{r.username}}</td>
 								<td>
 									<input type="button" value="Remove" class="btn btn-primary" ng-click="removeRow(r)"/>
 								</td>
