Representation funcationality working for patient.  For issue #27

--- a/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
+++ b/iTrust2/src/main/resources/views/patient/editPersonalRepresentatives.html
@@ -27,7 +27,8 @@
 				}
 				
 				$scope.removeRow = function(rep) {
-					$http.delete('/iTrust2/api/v1/editPersonalRepresentatives' + rep.self.username).then(
+					console.log(rep.self.username)
+					$http.delete('/iTrust2/api/v1/editPersonalRepresentatives/' + rep.self.username).then(
 							function(response) {
 								$scope.loadTable();
 								$scope.message = "";
