--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -147,6 +147,7 @@ a {
 									User</a></li>
 							<li><a href="/iTrust2/admin/drugs" id="drugs">Manage Drugs</a></li>
 							<li><a href="/iTrust2/admin/manageICDCodes" id="manageICDCodes">Manage ICD-10 Codes</a></li>
+							<li><a href="/iTrust2/admin/manageLOINCCodes" id="manageLOINCCodes">Manage LOINC Codes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
@@ -154,13 +155,6 @@ a {
 						<ul class="dropdown-menu">
 							<li><a href="/iTrust2/personnel/editDemographics"
 								id="editdemographics-personnel">Edit Demographics</a></li>
-						</ul>
-					</li>
-					<li class="dropdown"><a class="dropdown-toggle"
-						data-toggle="dropdown" href="#">Lab Procedures<span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="/iTrust2/admin/editLabCodes"
-								id="editdemographics-personnel">Edit Lab Procedure Codes</a></li>
 						</ul>
 					</li>
 				</ul>
