--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -184,7 +184,7 @@ a {
 							class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/iTrust2/hcp/emergencyHealthRecords"
-								id="requesthealthrecords">View Emergency Health Records</a></li>
+								id="requesthealthrecordshcp">View Emergency Health Records</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
@@ -232,7 +232,7 @@ a {
 							class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/iTrust2/er/emergencyHealthRecords"
-								id="requesthealthrecords">View Emergency Health Records</a></li>
+								id="requesthealthrecordser">View Emergency Health Records</a></li>
 						</ul>
 					</li>
 					<li class="dropdown"><a class="dropdown-toggle"
