--- a/iTrust2/src/main/resources/views/patient/viewOfficeVisits.html
+++ b/iTrust2/src/main/resources/views/patient/viewOfficeVisits.html
@@ -172,7 +172,22 @@
                     });
                   }
 
-
+                  $http.get("/iTrust2/api/v1/labsforvisit/" + $scope.selectedVisitID).then(
+                          function (response) {
+                            $scope.labsResponse = response.data;
+                            var lLength = $scope.labsResponse.length;
+                            if(lLength > 0){
+                              $scope.showLabs = true;  
+                            }
+                            for (var i = 0; i < lLength; i++) {
+                              $scope.labProcedures.push({
+                            	comments: $scope.labProcedure[i].comments,
+                                code: $scope.labProcedures[i].code,
+                                completionStatus: $scope.labProcedures[i].completionStatus,
+                                priorityLevel: $scope.labProcedures[i].priorityLevel
+                              });
+                            }
+                          });
 
                   $scope.three = false;
                   $scope.threeAndUp = false;
@@ -477,6 +492,45 @@
                           </div>
                         </div>
                       </div>
+                      
+                      <!-- Lab Procedures Panel  -->
+                        <div class="col-md-4">
+                          <div class="panel panel-info">
+                            <div class="panel-heading">
+                              <h4>Lab Procedures</h4>
+                            </div>
+                            <div class="panel-body" ng-show="showLabProcedures">
+                              <div class="row">
+                                <div class="col-md-4">
+                                  <b>Lab Procedure</b>
+                                </div>
+                                <div class="col-md-4">
+                                  <b>Priority Level</b>
+                                </div>
+                                <div class="col-md-4">
+                                  <b>Comments</b>
+                                </div>
+                                <div class="col-md-4">
+                                  <b>Completion Status</b>
+                                </div>
+                              </div>
+                              <div class="row" ng-repeat="l in labProcedures">
+                                <div class="col-md-4">
+                                  {{l.code.longCommonName}}
+                                </div>
+                                <div class="col-md-4">
+                                  {{l.priorityLevel}}
+                                </div>
+                                <div class="col-md-4">
+                                  {{l.comments}}
+                                </div>
+                                <div class="col-md-4">
+                                  {{l.completionStatus}}
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
 
                       <!-- Notes and Error Messages -->
                       <div class="row">
